# autonolas-registry-draft

./: Anchor.toml  Makefile  package-lock.json  package.json
programs/registry/: Cargo.toml
programs/registry/src/: lib.rs
tests/: registry.ts
