[package]
name = "registry"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "registry"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
test-env = []


[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
hex = "0.4.3"
anchor-spl = { version = "0.32.1" }
mpl-token-metadata = "5.1.0"
solana-sha256-hasher = "2.3.0"
